validaciones en roles, autoridad comunitaria y operador de proteccion

--- a/translations/messages.es.xlf
+++ b/translations/messages.es.xlf
@@ -44,7 +44,7 @@
             </trans-unit>
             <trans-unit id="lbl.delete">
                 <source>lbl.delete</source>
-                <target>Eliminar</target>
+                <target>Desactivar</target>
             </trans-unit>
             <trans-unit id="lbl.restore">
                 <source>lbl.restore</source>
